--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -5,27 +8,306 @@
   max-width: 1600px;
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
+  padding: 0;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
+  color: black;
 }
 
-.header {
+.header{
+  margin: 0 auto;
+  padding: 0;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
   /* выше установили ограничения для секции */
+}
+.logo_place_header{
+  width: 183px;
+  height: 32px;
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  order: 1;
+  }
+.header__title{
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  margin: 0 0 0 64px;
+  order: 2;
+  z-index: 2; 
+  font-weight: bold;
+}
+.header__subtitle{
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  order: 3;
+  z-index: 2;
+  font-weight: normal;
+}
+.header__link{
+  text-decoration: none;
+  color: #2f80ed;
+}
+.header__main-illustration{
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 0;
 }
+.content{
+  margin: 0 auto;
+  padding: 0;
+}
+.two-column{
+margin: 100px auto;
+display:flex;
+flex-direction: row;
+width: 80%;
+justify-content: space-between;
+align-items: stretch;
+}
+.two-column__brief{
+  margin: 0 auto; 
+  width: 175px;
+  align-self: stretch;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+.two-column__main-text{
+  width: 80%;
+  min-width: 784px;
+}
+.two-column__paragraph{
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+}
+.two-column__conclusion{
+  margin: 30px auto;
+}
+.two-column__paragraph_line-weight_bold{
+  font-weight: bold;
+}
+.digits{
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+.section-title{
+margin: 100px auto 0;
+width: 60%;
+text-align: center;
+line-height: 1.15;
+font-size: 60px;
+font-weight: bold;
+z-index: 2;
+}
+.section-subtitle{
+margin: 20px auto 0;
+width: 60%;
+text-align: center;
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+}
+.table{
+margin: 0 auto 100px;
+padding: 0;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: space-between;
+width: 1100px;
+list-style: none;
+}
+.cell{
+  margin: 60px 0 0 0;
+  width: 250px;
+  flex-basis: auto;
+  padding: 0;
+  z-index: 2;
+}
+.heading{
+  margin:0 auto;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 2;
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+}
+.text{
+  margin: 20px auto 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 2;
+}
+.feynman{
+  margin: 0 auto;
+  height: 890px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  flex-wrap: wrap;
+
+}
+.feynman__title{
+  margin: 100px auto 0;
+  width: 648px;
+text-align: center;
+z-index: 2;
+line-height: 1.15;
+font-size: 120px;
+font-weight: bold;
+}
+.feynman__subtitle{
+  margin: 70px auto 0;
+  z-index: 2;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+.feynman__link{
+position: absolute;
+top: 50%;
+right: 48px;
+text-decoration: none;
+color: #2f80ed;
+z-index: 2;
+line-height: 51px;
+font-size: 36px;
+font-weight: normal;
+}
+.feynman__portret{
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 0;
+}
+.kaufman{
+  background-color:  #1f1f1f;
+  position:relative;
+  overflow: hidden;
+  
+}
+.section-title_theme_dark{
+  margin: 90px auto 0;
+  color:white;
+  z-index: 2;
+}
+.table_theme_dark{
+  margin: 0 auto 90px;
+  z-index: 2;
+}
+.cell_theme_dark{
+  margin: 80px 0 0 0;
   width: 200px;
+  z-index: 2;
+}
+.heading_theme_dark{
+color:white;
+z-index: 2;
+}
+.text_theme_dark{
+  color:white;
+  z-index: 2;
+}
+.kaufman__img-triangle{
+  width: 877px;
+  height: 877px;
+  position:absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
+}
+.footer{
+margin: 0 auto;
+padding: 60px 0 40px;
+min-height: 350px;
+background-color: #1f1f1f;
+box-sizing: border-box;
+display:flex;
+z-index: 1;
+}
+.footer__columns{
+margin: 0 auto;
+width: 90%;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+background-color: #1f1f1f;
+}
+.footer__columns_content_copyright{
+flex-basis: 711px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-content: flex-start;
+}
+.logo_place_footer{
+  width: 183px;
+  height: 35px;
+}
+.footer__author{
+  margin: 18px 0;
+   color: white;
+  line-height: 25px;
+  font-size: 18px;
+}
+.footer__column-heading{
+  margin: 0;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+.footer__column-link{
+margin: 20px 0 16px;
+padding: 0;
+display:flex;
+flex-direction: column;
+justify-content: space-between;
+align-content: flex-start;
+list-style: none;
+line-height: 30px;
+font-size: 18px;
+font-weight: normal;
+color: white;
+}
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0; 
 }
