--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,3 @@
-body{
-  margin: 0;
-}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -11,7 +8,7 @@ body{
   padding: 0;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: "Helvetica Neue", "Arial", sans-serif;
-  color: black;
+  color: #1f1f1f;
 }
 
 .header{
@@ -27,8 +24,11 @@ body{
   position: relative;
   /* выше установили ограничения для секции */
 }
-.logo_place_header{
+.logo{
+  margin: 0;
   width: 183px;
+}
+.logo_place_header{
   height: 32px;
   position: absolute;
   top: 30px;
@@ -45,6 +45,7 @@ body{
   font-weight: bold;
 }
 .header__subtitle{
+  margin: 0;
   width: 388px;
   line-height: 25px;
   font-size: 18px;
@@ -82,16 +83,19 @@ body{
   margin: 0 auto;
   padding: 0;
 }
-.two-column{
-margin: 100px auto;
-display:flex;
-flex-direction: row;
-width: 80%;
-justify-content: space-between;
-align-items: stretch;
+.description{
+  margin: 0;
 }
-.two-column__brief{
-  margin: 0 auto;
+.two-columns{
+  margin: 100px auto;
+  display:flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.two-columns__brief{
+  margin: 0;
   width: 175px;
   align-self: stretch;
   line-height: 1.2;
@@ -99,20 +103,22 @@ align-items: stretch;
   font-weight: normal;
   color: #2f80ed;
 }
-.two-column__main-text{
+.two-columns__main-text{
   width: 80%;
   min-width: 784px;
 }
-.two-column__paragraph{
-line-height: 34px;
-font-size: 24px;
-font-weight: normal;
+.two-columns__paragraph{
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
 }
-.two-column__conclusion{
-  margin: 30px auto;
-}
-.two-column__paragraph_line-weight_bold{
+.span-accent{
   font-weight: bold;
+  margin: 30px auto;
+ }
+.two-columns__paragraph:nth-child(2){
+  margin: 30px auto;
 }
 .digits{
   margin: 0 auto;
@@ -121,40 +127,40 @@ font-weight: normal;
   align-content: center;
 }
 .section-title{
-margin: 100px auto 0;
-width: 60%;
-text-align: center;
-line-height: 1.15;
-font-size: 60px;
-font-weight: bold;
-z-index: 2;
+  margin: 100px auto 0;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  z-index: 2;
 }
 .section-subtitle{
-margin: 20px auto 0;
-width: 60%;
-text-align: center;
-line-height: 34px;
-font-size: 24px;
-font-weight: normal;
+  margin: 20px auto 0;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
 }
 .table{
-margin: 0 auto 100px;
-padding: 0;
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: space-between;
-width: 1100px;
-list-style: none;
+  margin: 0 auto 100px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1100px;
+  list-style: none;
 }
-.cell{
+.table__cell{
   margin: 60px 0 0 0;
   width: 250px;
   flex-basis: auto;
   padding: 0;
   z-index: 2;
 }
-.heading{
+.table__heading{
   margin:0 auto;
   line-height: 1.15;
   font-size: 24px;
@@ -171,7 +177,7 @@ list-style: none;
 }
 .feynman{
   margin: 0 auto;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
@@ -183,11 +189,11 @@ list-style: none;
 .feynman__title{
   margin: 100px auto 0;
   width: 648px;
-text-align: center;
-z-index: 2;
-line-height: 1.15;
-font-size: 120px;
-font-weight: bold;
+  text-align: center;
+  z-index: 2;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
 }
 .feynman__subtitle{
   margin: 70px auto 0;
@@ -197,15 +203,15 @@ font-weight: bold;
   font-weight: normal;
 }
 .feynman__link{
-position: absolute;
-top: 50%;
-right: 48px;
-text-decoration: none;
-color: #2f80ed;
-z-index: 2;
-line-height: 51px;
-font-size: 36px;
-font-weight: normal;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+  color: #2f80ed;
+  z-index: 2;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
 }
 .feynman__portret{
   width: 867px;
@@ -216,13 +222,19 @@ font-weight: normal;
   z-index: 0;
 }
 .kaufman{
+  margin: 0 auto;
+  box-sizing: border-box;
   background-color:  #1f1f1f;
   position:relative;
   overflow: hidden;
-  
-}
+  }
 .section-title_theme_dark{
   margin: 90px auto 0;
+  position: relative;
+  color:white;
+  z-index: 2;
+}
+.section-subtitle_theme_dark{
   color:white;
   z-index: 2;
 }
@@ -230,58 +242,61 @@ font-weight: normal;
   margin: 0 auto 90px;
   z-index: 2;
 }
-.cell_theme_dark{
+.table__cell_theme_dark{
   margin: 80px 0 0 0;
   width: 200px;
   z-index: 2;
 }
-.heading_theme_dark{
+.table__heading_theme_dark{
 color:white;
 z-index: 2;
 }
-.text_theme_dark{
+.table__text_theme_dark{
   color:white;
   z-index: 2;
 }
-.kaufman__img-triangle{
+.kaufman__triangle{
   width: 877px;
   height: 877px;
   position:absolute;
+  background-image: url(/images/kaufman-triangle.svg);
+  background-position: top right;
+  background-size: cover;
   top: 0;
   right: -210px;
   z-index: 0;
 }
 .footer{
-margin: 0 auto;
-padding: 60px 0 40px;
-min-height: 350px;
-background-color: #1f1f1f;
-box-sizing: border-box;
-display:flex;
-z-index: 1;
+  margin: 0;
+  background-color: #1f1f1f;
+ 
 }
 .footer__columns{
-margin: 0 auto;
-width: 90%;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-background-color: #1f1f1f;
+  padding: 60px 0 40px;
+  margin: 0 auto;
+  min-height: 350px;
+  box-sizing: border-box;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;  
+}
+.footer__column{
+  margin: 0;
+  display: flex;
+  flex-direction: column; 
 }
 .footer__columns_content_copyright{
-flex-basis: 711px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-content: flex-start;
+  flex-basis: 711px;
+  justify-content: space-between;
+  align-content: flex-start;
 }
 .logo_place_footer{
-  width: 183px;
   height: 35px;
 }
 .footer__author{
   margin: 18px 0;
-   color: white;
+  color: white;
   line-height: 25px;
   font-size: 18px;
 }
@@ -293,17 +308,21 @@ align-content: flex-start;
   font-weight: bold;
 }
 .footer__column-link{
-margin: 20px 0 16px;
-padding: 0;
-display:flex;
-flex-direction: column;
-justify-content: space-between;
-align-content: flex-start;
-list-style: none;
-line-height: 30px;
-font-size: 18px;
-font-weight: normal;
-color: white;
+  text-decoration: none;
+  color: white;
+}
+.footer__column-links{
+  margin: 20px 0 16px;
+  padding: 0;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: flex-start;
+  list-style: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  
 }
 .footer__social-icon{
   width: 16px;
