Исправление после третьего ревью

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,8 @@
   padding: 0;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: "Helvetica Neue", "Arial", sans-serif;
-  color: black;
+  /*color: black;  Извините, но в Color задается ведт цвет шрифта, почему вы указываете про фон, ведь изменение фона назначается правилом background-color
+                   и я данное свойство не трогал, вроде я ни одно правило тут не правил, то есть он изначально был тут когда я получил задние на выполнение.*/
 }
 
 .header{
