--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -2,7 +2,7 @@
     width: 877px;
     height: 877px;
     position:absolute;
-    background-image: url(/images/kaufman-triangle.svg);
+    background-image: url(../../../images/kaufman-triangle.svg);
     background-position: top right;
     background-size: cover;
     top: 0;
