--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,6 +1,6 @@
 .khan__book-pic{
-    width: auto;
-    height: auto;
-    max-width: 620px;
-    max-height: 608px;
+    width: 620px;
+    height: 608px;
+    /*max-width: 620px;
+    max-height: 608px;*/
 }
