--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,7 +1,7 @@
 .cards__image{
-margin: 60px 40px 0;
-border-radius: 50%;
-height: 160px;
-width: 160px;
-text-decoration: none;
+    margin: 0 40px 0;
+    border-radius: 50%;
+    height: 160px;
+    width: 160px;
+    text-decoration: none;
 }
