--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -5,6 +5,6 @@
     align-items: center;
     width: 240px;
 }
-li:nth-child(3n).cards__item {
- margin: 60px 0 0;
+.cards__item:nth-child(3n) {
+    margin: 60px 0 0;
 }
