--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,5 +1,10 @@
 .resources__logo{
     margin: 0;
+    padding: 0;
     height: 38px;
     width: 270px;
 }
+.resources__logo:hover{
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
+    }
